<resources>
    <string name="app_name">Toughen</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="registeruser">注册新用户</string>
    <string name="login_phone_hint">请输入您的手机号</string>
    <string name="login_password_hint">请输入您的密码</string>
    <string name="forget_pass">忘记密码</string>
    <string name="find">发现</string>
    <string name="main">首页</string>
    <string name="mine">我的</string>
    <string name="message">消息</string>
    <string name="none_message_tip_value">您还没有消息</string>
    <string name="ok_val">确定</string>
    <string name="cancel_val">取消</string>
    <string name="send">发送</string>
    <string name="register_phone_value">请输入您的手机号</string>
    <string name="register_confirm_password_value">请再次输入您的密码</string>
    <string name="register_password_value">请输入您的密码</string>
    <string name="register_identifying_code_value">请输入您的验证码</string>
    <string name="identifying_code_value">验证码</string>
    <string name="toast_empty_username">用户名不能为空！</string>
    <string name="toast_empty_password">密码不能为空！</string>
    <string name="click_again_to_back">再一次点击退出应用！</string>
    <string name="login_error_again">登陆失败请重新登陆！</string>
    <string name="please_your_network">请检查您的网络！</string>
    <string name="feedback">意见反馈</string>
    <string name="setting">设置</string>
    <string name="aboutus">关于我们</string>
    <string name="memorandumlist">备忘列表</string>
    <string name="myfollow">我的关注</string>
    <string name="title_memorandum_list">备忘列表</string>
    <string name="memorandumtitle">备忘标题:</string>
    <string name="create_time">创建时间</string>
    <string name="memorandum_content">备忘信息</string>
    <string name="memorandum_info_title">备忘信息</string>
    <string name="cancel_auth_val">取消认证</string>
    <string name="auth_user">用户认证</string>
    <string name="publish_picture">发布动态</string>
    <string name="find_t_man">发现T友</string>
    <string name="site_distribution">T友分布</string>
    <string name="app_for">分享路上的激情！</string>
    <string name="help">我来帮你</string>
    <string name="get_help">紧急求助</string>
    <string name="news">行程见闻</string>
    <string name="userhome">个人主页</string>
    <string name="dynamics">T友动态</string>
    <string name="events">活动</string>
    <string name="follow">关注</string>
    <string name="news_info">见闻详情</string>
    <string name="loading_data_tip_value">数据加载中...</string>
    <string name="voice_value">开启语音识别</string>
    <string name="logout">退出登录</string>
    <string name="username_value">用户名</string>
    <string name="user_login_value">账户登录</string>
    <string name="find_top_search_hintval">输入您感兴趣的主题进行搜索</string>
    <string name="mybehavior1">com.zx.toughen.behavior.MyBehavior</string>
</resources>
