<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.zx.toughen.view.MyTitleBarView
        android:id="@+id/titlebar_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_titlebar"
        android:background="@color/color_main_normal"
        app:left_img_res="@drawable/selector_return_home"
        app:show_left_img="true"
        app:title_name="@string/register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_xxl">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_xxl"
            android:layout_marginTop="@dimen/margin_xxxl"
            android:background="@drawable/selector_edit_background"
            android:hint="@string/register_phone_value"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_xl"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text_hint"
            android:textSize="@dimen/text_size_44px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_xxl"
            android:layout_marginTop="@dimen/margin_xl"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_edit_background"
                android:hint="@string/register_identifying_code_value"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:paddingLeft="@dimen/padding_xl"
                android:textColor="@color/color_text"
                android:textColorHint="@color/color_text_hint"
                android:textSize="@dimen/text_size_44px" />

            <TextView
                android:id="@+id/get_vcode_view"
                android:layout_width="@dimen/view_width_register_getvcode_view"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_l"
                android:background="@drawable/selector_login_loginview_background"
                android:gravity="center"
                android:text="@string/identifying_code_value"
                android:textColor="@color/selector_identifying_code_textcolor"
                android:textSize="@dimen/text_size_44px" />
        </LinearLayout>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_xxl"
            android:layout_marginTop="@dimen/margin_xl"
            android:background="@drawable/selector_edit_background"
            android:hint="@string/register_password_value"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_xl"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text_hint"
            android:textSize="@dimen/text_size_44px" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_xxl"
            android:layout_marginTop="@dimen/margin_xl"
            android:background="@drawable/selector_edit_background"
            android:hint="@string/register_confirm_password_value"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_xl"
            android:textColor="@color/color_text"
            android:textColorHint="@color/color_text_hint"
            android:textSize="@dimen/text_size_44px" />

        <Button
            android:id="@+id/register_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height_xxl"
            android:layout_marginTop="@dimen/margin_xxxl"
            android:background="@drawable/selector_login_loginview_background"
            android:text="@string/register"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_48px" />
    </LinearLayout>
</LinearLayout>
