<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tip_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_xxl"
        android:layout_marginRight="@dimen/margin_xxl"
        android:layout_marginTop="@dimen/view_height_xxl"
        android:text="@string/user_login_value"
        android:textColor="@color/color_2e2e2e"
        android:textSize="@dimen/text_size_60px"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_nickname_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_height_xxxl"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:counterTextAppearance="@style/Login_EditTextSstyle_Hint"
        app:hintTextAppearance="@style/Login_EditTextSstyle_Hint"
        app:layout_constraintLeft_toLeftOf="@id/tip_view"
        app:layout_constraintRight_toRightOf="@id/tip_view"
        app:layout_constraintTop_toBottomOf="@id/tip_view">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_nickname_view"
            style="@style/Login_EditTextSstyle"
            android:layout_marginTop="@dimen/margin_l"
            android:drawableLeft="@drawable/icon_login_input_phonenumber"
            android:drawablePadding="@dimen/padding_l"
            android:hint="@string/login_phone_hint"
            android:imeOptions="actionNext|flagNoExtractUi"
            android:inputType="phone"
            android:maxLength="11" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_height_l"
        app:hintTextAppearance="@style/Login_EditTextSstyle_Hint"
        app:layout_constraintLeft_toLeftOf="@id/tip_view"
        app:layout_constraintRight_toRightOf="@id/tip_view"
        app:layout_constraintTop_toBottomOf="@id/login_nickname_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password_view"
            style="@style/Login_EditTextSstyle"
            android:layout_marginTop="@dimen/margin_l"
            android:drawableLeft="@drawable/icon_login_input_password"
            android:drawablePadding="@dimen/padding_l"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/login_login_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/view_height_xxl"
        android:layout_marginTop="@dimen/view_height_xxl"
        android:background="@drawable/selector_login_loginview_background"
        android:text="@string/login"
        android:textColor="@color/login_loginview_text_color"
        android:textSize="@dimen/text_size_48px"
        app:layout_constraintLeft_toLeftOf="@id/tip_view"
        app:layout_constraintRight_toRightOf="@id/tip_view"
        app:layout_constraintTop_toBottomOf="@id/login_password_layout" />

    <TextView
        android:id="@+id/login_forget_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_height_xxl"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/tip_view"
        android:clickable="true"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_xl"
        android:paddingRight="@dimen/padding_xl"
        android:text="@string/forget_pass"
        android:textColor="@color/color_093d5a"
        android:textSize="@dimen/text_size_36px"
        app:layout_constraintLeft_toLeftOf="@id/tip_view"
        app:layout_constraintTop_toBottomOf="@id/login_login_view" />

    <TextView
        android:id="@+id/login_register_view"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/view_height_xxl"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_xxl"
        android:layout_marginLeft="@dimen/margin_xl"
        android:layout_toRightOf="@id/tip_view"
        android:clickable="true"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_xl"
        android:paddingRight="@dimen/padding_xl"
        android:text="@string/registeruser"
        android:textColor="@color/color_f39b9c"
        android:textSize="@dimen/text_size_36px"
        app:layout_constraintRight_toRightOf="@id/login_login_view"
        app:layout_constraintTop_toBottomOf="@id/login_login_view" />
</android.support.constraint.ConstraintLayout>
