<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.zx.toughenlib.view.MyBannerView
                android:id="@+id/banner_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/find_viewpager_height" />


            <TextView
                android:id="@+id/news_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_xxxl"
                android:layout_marginTop="@dimen/view_height_line"
                android:background="@drawable/selector_item_click_bg_color"
                android:clickable="true"
                android:drawableRight="@drawable/icon_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_xl"
                android:paddingRight="@dimen/padding_xl"
                android:text="@string/news"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_44px" />

            <TextView
                android:id="@+id/events_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_xxxl"
                android:layout_marginTop="@dimen/view_height_line"
                android:background="@drawable/selector_item_click_bg_color"
                android:clickable="true"
                android:drawableRight="@drawable/icon_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_xl"
                android:paddingRight="@dimen/padding_xl"
                android:text="@string/events"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_44px" />

            <TextView
                android:id="@+id/find_man_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_xxxl"
                android:layout_marginTop="@dimen/padding_xl"
                android:background="@drawable/selector_item_click_bg_color"
                android:clickable="true"
                android:drawableRight="@drawable/icon_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_xl"
                android:paddingRight="@dimen/padding_xl"
                android:text="@string/find_t_man"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_44px" />

            <TextView
                android:id="@+id/get_help_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_xxxl"
                android:layout_marginTop="@dimen/padding_xl"
                android:background="@drawable/selector_item_click_bg_color"
                android:clickable="true"
                android:drawableRight="@drawable/icon_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_xl"
                android:paddingRight="@dimen/padding_xl"
                android:text="@string/get_help"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_44px" />

            <TextView
                android:id="@+id/help_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_xxxl"
                android:layout_marginTop="@dimen/view_height_line"
                android:background="@drawable/selector_item_click_bg_color"
                android:clickable="true"
                android:drawableRight="@drawable/icon_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_xl"
                android:paddingRight="@dimen/padding_xl"
                android:text="@string/help"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_44px" />

            <TextView
                android:id="@+id/voice_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_xxxl"
                android:layout_marginTop="@dimen/view_height_line"
                android:background="@drawable/selector_item_click_bg_color"
                android:clickable="true"
                android:drawableRight="@drawable/icon_arrow"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_xl"
                android:paddingRight="@dimen/padding_xl"
                android:text="@string/voice_value"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size_44px" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>