<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/view_height_xxxl"
    android:layout_alignParentBottom="true"
    android:background="@color/color_white"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/message_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:src="@drawable/selector_home_bottom_message" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/message"
            android:textColor="@color/main_text_color_selector"
            android:textSize="@dimen/text_size_30px" />
    </LinearLayout>

    <View
        android:layout_width="@dimen/view_height_line"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_l"
        android:layout_marginTop="@dimen/margin_l"
        android:background="@drawable/shape_gradual_change_line" />

    <LinearLayout
        android:id="@+id/find_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:src="@drawable/selector_home_bottom_find" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/find"
            android:textColor="@color/main_text_color_selector"
            android:textSize="@dimen/text_size_30px" />
    </LinearLayout>

    <View
        android:layout_width="@dimen/view_height_line"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_l"
        android:layout_marginTop="@dimen/margin_l"
        android:background="@drawable/shape_gradual_change_line" />

    <LinearLayout
        android:id="@+id/mine_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:src="@drawable/selector_home_bottom_personal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/mine"
            android:textColor="@color/main_text_color_selector"
            android:textSize="@dimen/text_size_30px" />
    </LinearLayout>
</LinearLayout>